@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:               Proc-Simple
-version:            1.26
+version:            1.27
 abstract:           ~
 author:  []
 license:            unknown
@@ -18,7 +18,7 @@ no_index:
     directory:
         - t
         - inc
-generated_by:       ExtUtils::MakeMaker version 6.50
+generated_by:       ExtUtils::MakeMaker version 6.55_02
 meta-spec:
     url:      http://module-build.sourceforge.net/META-spec-v1.4.html
     version:  1.4
