@@ -1,6 +1,14 @@
 
 use ExtUtils::MakeMaker;
 
+my $meta_merge = {
+    META_MERGE => {
+        resources => {
+            repository  => 'http://github.com/mschilli/proc-simple-perl',
+        },
+    }
+};
+
 WriteMakefile( 
         'VERSION_FROM' => "Simple.pm",
 	'NAME'	  => 'Proc::Simple',
@@ -9,9 +17,5 @@ WriteMakefile(
 	    'Test::More' => 0,
 	    'IO::Handle' => 0,
 	},
-        META_MERGE          => {
-            resources       => {
-                repository  => 'http://github.com/mschilli/proc-simple-perl',
-            }
-        },
-	);
+        $ExtUtils::MakeMaker::VERSION >= 6.50 ? (%$meta_merge) : (),
+);
