@@ -2,6 +2,9 @@
     Proc::Simple CHANGES
 ######################################################################
 
+          From 1.26: [RT 62285] Pod fix for redirect_output()
+                     Fixed github link
+
           from 1.25: Localize special variables so that the exit status 
                      from waitpid doesn't leak out, causing exit status 
                      to be incorrect (RT33440, fixed by Brad Cavanagh).
